fixed logo looking squashed, added some padding to the help page's text

--- a/HeyBrain/css/styles.css
+++ b/HeyBrain/css/styles.css
@@ -46,7 +46,13 @@ html {
 	height: 100%;
 }
 
-body, p {
+body {
+	color: #777;
+	font: 400 1rem/1.75rem "Open Sans", sans-serif;
+}
+p {
+	padding-left: 2.5em;
+	padding-right: 2.5em;
 	color: #777;
 	font: 400 1rem/1.75rem "Open Sans", sans-serif;
 
@@ -585,8 +591,8 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .navbar-brand.logo-image img {
-    width: 6.6875rem;
-	height: 2.25rem;
+    /*width: 6.6875rem;*/
+	height: 3rem;
 }
 
 .navbar-custom .navbar-brand.logo-text {
